Agregado Hero y About

--- a/index.html
+++ b/index.html
@@ -19,8 +19,30 @@
                 <li><a href="#">Contacto</a></li>
                 <img class="informacion" src="./assets/informacion.png" alt="Icono de informacion">
             </ul>
-            
         </div>
     </nav>
+    <main class="container">
+        <div class="container-info">
+            <h1 class="container-title">“Creando tu presencia digital, un pixel a la vez.”</h1>
+            <p> Nuestra misión es Transformar ideas en <b>realidad digital</b>, impulsando el <b>crecimiento</b> de tu negocio. Tejeremos la web de tus <b>sueños</b></p>
+                <div class="container-buttons">
+                    <button class="contact-button">Contactanos</button>
+                    <button class="contact-button works-button">Nuestros trabajos</button>
+                </div>
+        </div>
+        <div>
+            <img class="container-img" src="./assets/webImg.svg" alt="">
+        </div>
+    </main>
+    <section class="section-container">
+       
+        <h2 class="section-title">¿Cómo potenciamos tu presencia digital?</h2>
+        <h3 class="section-title">SEO</h3>
+        <span>Elevamos tu sitio web a las cimas de los resultados de búsqueda, asegurando una visibilidad óptima.</span>
+        <h3 class="section-title">Desarrollo Web</h3> 
+        <span>Creamos tu sitio web con un diseño exclusivo y personalizado, adaptándonos a tus necesidades y visión.</span>
+        <h3 class="section-title">Soporte Técnico</h3>
+        <span>Ofrecemos soporte técnico ininterrumpido, garantizando que tu sitio web esté siempre accesible y en pleno funcionamiento.</span>
+    </section>
 </body>
 </html>
